# OCRV_PP

./: .gitignore  cpu.py  cuda.py  main.py  pyproject.toml  requirements.txt
mvc/: main.py
mvc/controller/: controller.py
mvc/dataset/: dataset.py
mvc/model/: model.py
mvc/view/: view.py
